# bitlib

./: .gitignore  Makefile  README.md  bitlib.opam
docs/: Bitlib.html  Main.html  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Bitlib.html  type_Main.html
lib/: .merlin
lib/test/: .merlin
opam/: opam
src/: bitlib.ml
tests/: .merlin  test.ml
