opam-version: "2.0"
version: "1.0"
authors: "Chris Nevers <christophernevers96@gmail.com>"
maintainer: "Chris Nevers <christophernevers96@gmail.com>"
homepage: "https://github.com/chrisnevers/bitlib"
bug-reports: "https://github.com/chrisnevers/bitlib/issues"
dev-repo: "git://github.com/chrisnevers/bitlib.git"
synopsis: "A library for writing binary files"
build: [
  ["dune" "build" "-p" bitlib]
]

-with-test: ["dune" "runtest" "-p" bitlib]

depends: [
  "dune" {build}
  "alcotest" {test}
]
