opam-version: "2.0"
version: "1.0"
authors: "Chris Nevers <christophernevers96@gmail.com>"
maintainer: "Chris Nevers <christophernevers96@gmail.com>"
homepage: "https://github.com/chrisnevers/bitlib"
bug-reports: "https://github.com/chrisnevers/bitlib/issues"
dev-repo: "git://github.com/chrisnevers/bitlib.git"
synopsis: "A library for writing binary files"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune" {build}
  "alcotest" {test}
]
